# Ribbons_of_Democracy

./: README.md  pyproject.toml
decorations/: combat specialist certification.json  liberty citation.json  marksman citation.json
ribbons_of_democracy/: ABOUT.md  main.py
ribbons_of_democracy/components/: device_selector.py  ribbon_data.py  ribbon_designer.py  ribbon_drawer.py  ui_components.py
